# radcoringa

./: .env-example  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
coringa/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
coringa/migrations/: 0001_initial.py  0002_auto_20260531_1248.py  0003_nas_nasreload_radcheck.py  0004_alter_cliente_status.py  0005_radpostauth.py  0006_radacct.py  0007_radippool_cliente_habilitar_pool_cliente_pool_block_and_more.py  0008_alter_radippool_options.py
coringa/templates/coringa/: 403.html  404.html  500.html  base.html  cadastro.html  detalhes.html  historico.html  historico_detalhes.html  home.html  index.html  login.html  logs.html
coringa/templates/coringa/partials/: _navbar.html
freeradius/: Dockerfile  docker-entrypoint.sh  schema.sql
freeradius/mods-config/sql/main/mysql/: queries.conf
freeradius/mods-enabled/: sql
freeradius/sites-enabled/: default
